comments-openshift/templates/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific
  namespace: mauricio-tc-ec-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # Frontend -> backend-api
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8080
    # Backend-api -> backend-data
    - from:
        - podSelector:
            matchLabels:
              app: backend-api
      ports:
        - protocol: TCP
          port: 8081
    # Backend-data -> mongodb
    - from:
        - podSelector:
            matchLabels:
              app: backend-data
      ports:
        - protocol: TCP
          port: 27017
